--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "vite build && vite preview"
+    "start": "npm run build && npm run preview",
+    "puss": "npm run build && git add . && git push"
   },
   "dependencies": {
+    "firebase": "^11.10.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
